[workspace]
members = [
    "book/tests",
    "examples",
    "twilight-cache-inmemory",
    "twilight-embed-builder",
    "twilight-gateway-queue",
    "twilight-gateway",
    "twilight-http-ratelimiting",
    "twilight-http",
    "twilight-lavalink",
    "twilight-mention",
    "twilight-model",
    "twilight-standby",
    "twilight-util",
    "twilight-validate",
    "twilight",
]
